remove trailing colons

--- a/example/main.tex
+++ b/example/main.tex
@@ -1,4 +1,4 @@
-% vim:ft=tex:
+% vim:ft=tex
 \documentclass[debug, font=Times]{gw-dissertation}[2021/11/19]
 \usepackage{graphicx}
 \usepackage{lipsum}  % to generate random paragraphs
